--- a/Peas/Base.lproj/Main.storyboard
+++ b/Peas/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
+        <plugIn identifier="com.apple.WebKitIBPlugin" version="11762"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -750,7 +751,37 @@
                 </viewController>
                 <customObject id="e2S-XJ-Ujo" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="99" y="873"/>
+            <point key="canvasLocation" x="60" y="656"/>
+        </scene>
+        <!--Authentication View Controller-->
+        <scene sceneID="RQL-62-VDL">
+            <objects>
+                <viewController storyboardIdentifier="AuthenticationViewController" id="2dS-GX-mOE" customClass="AuthenticationViewController" customModule="Peas" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" id="tC6-R2-SVO">
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <webView translatesAutoresizingMaskIntoConstraints="NO" id="EiY-Gy-hrr">
+                                <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                                <webPreferences key="preferences" defaultFontSize="16" defaultFixedFontSize="13" minimumFontSize="0">
+                                    <nil key="identifier"/>
+                                </webPreferences>
+                            </webView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="EiY-Gy-hrr" secondAttribute="bottom" id="VHw-PQ-ohl"/>
+                            <constraint firstAttribute="trailing" secondItem="EiY-Gy-hrr" secondAttribute="trailing" id="ccF-AE-6xR"/>
+                            <constraint firstItem="EiY-Gy-hrr" firstAttribute="top" secondItem="tC6-R2-SVO" secondAttribute="top" id="h7Z-jn-qRV"/>
+                            <constraint firstItem="EiY-Gy-hrr" firstAttribute="leading" secondItem="tC6-R2-SVO" secondAttribute="leading" id="x3Y-gb-72L"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="EiY-Gy-hrr" id="hl9-Q0-AFU"/>
+                    </connections>
+                </viewController>
+                <customObject id="zHx-bj-T5U" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="652" y="438"/>
         </scene>
     </scenes>
 </document>
